--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,4 +14,7 @@ div.header{
 
 div.header>h2{
     margin: 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: normal;
+    font-weight: normal;
 }
