--- a/src/containers/voting/Voting.scss
+++ b/src/containers/voting/Voting.scss
@@ -3,6 +3,13 @@
     display: flex;
     flex-direction: column;
 
+    h2{
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        
+    }
+
     .votes-controls{
         height: 100%;
         display: flex;
@@ -20,6 +27,10 @@
         flex-direction: column;
         height: 100%;
         overflow-y: auto;
+    }
+
+    .react-tabs__tab:focus:after{
+        display: none !important;
     }
     
     .producer-item{
@@ -58,12 +69,13 @@
     .horizontal-slider{
     
         > .track {
-            height: 0.3rem;
-            margin-top: 0.3rem;
+            height: 0.2rem;
+            margin-top: 0.4rem;
         }
     
         > .track.track-0 {
             background:#FBC02D;
+            margin-right: 0.5rem;
         }
     
         > .track.track-1 {
