Fixed data source Mostly implemented voting

--- a/src/containers/voting/Voting.scss
+++ b/src/containers/voting/Voting.scss
@@ -33,7 +33,7 @@
         display: none !important;
     }
     
-    .producer-item{
+    .prep-item{
         display: flex;
         flex-direction: row;
         padding : 1rem;
