--- a/src/components/dropdown/Dropdown.css
+++ b/src/components/dropdown/Dropdown.css
@@ -6,13 +6,12 @@
 }
 
 .dropdown-component div.menu{
-    position:fixed;
+    position: relative;
     display: flex;
     flex-direction: column;
     background: #2A2F3B;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2), 0px 3px 14px rgba(0, 0, 0, 0.12), 0px 8px 10px rgba(0, 0, 0, 0.14);
     border-radius: 4px;
-
 }
 
 .dropdown-component div.menu button{
