--- a/src/containers/voting/Voting.scss
+++ b/src/containers/voting/Voting.scss
@@ -91,6 +91,32 @@
     .loading-container{
         height: 100%;
     }
+
+    .promo-container{
+        height: 5rem;
+        width: 100%;
+        // position: fixed;
+        background: #0D0F19;
+        bottom: 0px;
+        z-index: 10;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+
+        >*{
+            margin: 0rem 0.5rem;
+        }
+        >a{
+            color: white !important;
+            font-family: Segoe UI;
+            font-size: 9pt;
+            margin-right: 1rem;
+        }
+        >a[href]{
+            text-decoration: none !important;
+        }
+    }
     
     .horizontal-slider{
     
