--- a/src/containers/voting/Voting.scss
+++ b/src/containers/voting/Voting.scss
@@ -63,6 +63,7 @@
         display: flex;
         flex-direction: row;
         padding : 1rem;
+        align-items: center;
 
         .label{
             width: 12rem;
@@ -111,7 +112,7 @@
             color: white !important;
             font-family: Segoe UI;
             font-size: 9pt;
-            margin-right: 1rem;
+            margin-right: 0.5rem;
         }
         >a[href]{
             text-decoration: none !important;
@@ -122,7 +123,6 @@
     
         > .track {
             height: 0.2rem;
-            margin-top: 0.4rem;
         }
     
         > .track.track-0 {
@@ -140,6 +140,8 @@
             width: 1rem;
             border-radius: 0.5rem;
             outline: none;
+            margin-top: -0.4rem;
+
         }
     
     }
