--- a/src/components/dropdown/Dropdown.css
+++ b/src/components/dropdown/Dropdown.css
@@ -14,8 +14,11 @@
     border-radius: 4px;
 }
 
+.dropdown-component button svg {
+    fill: #616161;
+}
+
 .dropdown-component div.menu button{
     color: #FFFFFF;
     padding: 0.8rem 0.5rem;
-
 }
