--- a/src/index.css
+++ b/src/index.css
@@ -19,17 +19,18 @@ code {
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 1rem;
-  background: #FBC02D; 
+  background: #FBC02D;
 }
 
 
 @font-face {
   font-family: "SFProDisplay-Regular";
   src: url("/SFProDisplay-Regular.ttf");
-}  
+}
