--- a/src/containers/loading/Loading.css
+++ b/src/containers/loading/Loading.css
@@ -6,7 +6,7 @@
     justify-content: center;
 }
 
-.loading-container > img{
+.loading-container > svg{
     margin-bottom: 4rem;
 
     animation-duration: 1s;
